syntax = "proto3";

package ocf.cloud.grpcgateway.pb;

import "github.com/plgd-dev/cloud/resource-aggregate/pb/commands.proto";


option go_package = "github.com/plgd-dev/cloud/grpc-gateway/pb;pb";

message UpdateDeviceShadowSynchronizationRequest{
    string device_id = 1;
    bool enabled = 2;
}

message UpdateDeviceShadowSynchronizationResponse{}